CHANGES IN FLTK 1.1.4rc2

	- Images were not clipped properly on MacOS X (STR #114)
	- Fl::reload_scheme() and Fl::scheme("foo") incorrectly
	  called Fl::get_system_colors().  This prevented an
	  application from setting its own color preferences
	  (STR #115)
	- The 'Enter' key event on OS X would not set Fl::e_text
	  (STR #???)
	- Changed behaviour of fluid to always paste into
	  a selected group (STR #88)
	- Menuitem now changes font, even if fontsize
	  is not set (STR #110)
	- Swapped shortcut labels in OS X (STR #86)
	- Non-square Fl_Dial would calculate angle from user
	  input wrong (STR #101)
	- Updated documentatiopn of fl_draw (STR #94)
	  and Fl_Menu_::add() (STR #99)
	- Fluid collapse triangle events were not offset by
          horizontal scroll (STR #106)
	- QuitAppleEvent now correctly returns from Fl::run()
          instead of just exiting (STR #87)
	- Hiding the first created OpenGL context was not
	  possible. FLTK now manages a list of contexts (STR #77)
	- FLUID didn't keep the double/single buffer type for
	  windows.
	- FLTK didn't work with Xft2.
	- OSX window resizing didn't work (STR #64)
	- Fixed MacOS X shared library generation (STR #51)
	- Several widgets defined their own size() method but
	  didn't provide an inline method that mapped to the
	  Fl_Widget::size() method (STR #62)
	- Fl_Scroll didn't provide its own clear() method, so
	  calling clear() on a Fl_Scroll widget would also
	  destroy the scrollbars (STR #75)
	- Fl::event_text() was sometimes initialized to NULL
	  instead of an empty string (STR #70)
	- fl_draw() didn't properly handle a trailing escaped
	  "@" character (STR #84)
	- Added documentation for all forms of
	  Fl_Widget::damage() (STR #61)
	- Fl_Double_Window now has a type() value of
	  FL_DOUBLE_WINDOW, to allow double-buffered windows to
	  process redraws properly on WIN32 (STR #46)
	- Added FL_DAMAGE_USER1 and FL_DAMAGE_USER2 damage bits
	  for use by widget developers (STR #57)